<?xml version="1.0"?>
<package format="2">
  <name>dynamic_subscriber_node</name>
  <version>0.0.0</version>
  <description>Dynamic ROS 2 subscriber that calculates Hz</description>
  <maintainer email="samer.cana@gmail.com">Samer Khshiboun</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
